--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,11 +1,21 @@
 /* This is an example of using Sass, otherwise plain CSS works too*/
-$primary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
-;
+// $primary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+// ;
+*, *:before, *:after {
+  box-sizing: border-box;
+}
 
 body {
-  background: $primary-background;
+  background: light-gray;
 }
 
 .hidden {
   display: none;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  border: solid;
 }
