--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -19,3 +19,35 @@ header {
   justify-content: space-around;
   border: solid;
 }
+
+.trip-information-area {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  // background-color: white;
+  border: solid white;
+  // background-image: url('../images/header-background.jpg');
+  background-size: cover;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  height: 300px;
+ }
+
+ .trips-area {
+   width: 100%;
+   border: solid 3px blue;
+   display: flex;
+   flex-flow: row wrap;
+   // justify-content: space-around;
+ }
+
+.trip-image {
+  height: 200px;
+  width: 100%;
+}
+ .trip-card {
+   margin: 30px;
+   width: 400px;
+   height: 400px;
+   border: solid red;
+}
