--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -26,7 +26,7 @@ header {
   justify-content: space-around;
   // background-color: white;
   border: solid white;
-  // background-image: url('../images/header-background.jpg');
+  background-image: url('../images/header-background.jpg');
   background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
@@ -50,4 +50,5 @@ header {
    width: 400px;
    height: 400px;
    border: solid red;
+   text-align: center;
 }
