--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -17,7 +17,7 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  border: solid;
+  // border: solid;
 }
 
 .welcome {
@@ -31,7 +31,6 @@ header {
 
 .right-header-div {
   display: flex;
-  // border: 2px black solid;
   width: 300px;
   justify-content: space-around;
   align-items: center;
@@ -49,8 +48,6 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  // background-color: white;
-  // border: solid white;
   background-image: url('../images/header-background.jpg');
   background-size: cover;
   background-position: bottom;
@@ -59,9 +56,7 @@ header {
  }
 
  .request-trip-form {
-  border: 2px solid white;
   width: 780px;
-  // text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -71,7 +66,6 @@ header {
  .form-container {
    width: 50%;
    height: 2em;
-   // border: solid 2px white;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
@@ -92,10 +86,10 @@ header {
 
  #trip-duration {
   height: 1.8em;
-  width: 20%;
+  width: 150px;
   border-radius: 2px;
   border: none;
-  margin-right: 151px;
+  margin-right: 82px;
  }
 
  #trip-travelers {
@@ -124,7 +118,7 @@ header {
 
     &:hover {
       cursor: pointer;
-      background-color: purple;
+      background-color: light-gray;
     }
 }
 
@@ -134,7 +128,7 @@ header {
 
  .trips-area {
    width: 100%;
-   border: solid 3px blue;
+   // border: solid 3px blue;
    display: flex;
    flex-flow: row wrap;
    // justify-content: space-around;
@@ -148,6 +142,6 @@ header {
    margin: 30px;
    width: 400px;
    height: 400px;
-   border: solid red;
+   // border: solid red;
    text-align: center;
 }
