Start initial styling on login

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -44,6 +44,10 @@ header {
   font-size: 1em;
 }
 
+.login-form {
+  border: solid 2px red;
+}
+
 .trip-information-area {
   display: flex;
   flex-direction: row;
