--- a/src/css/_login.scss
+++ b/src/css/_login.scss
@@ -1,3 +1,30 @@
+.login-area {
+  margin-top: 100px;
+}
+
 .login-form {
-  border: solid 2px red;
+  width: 500px;
+  height: 200px;
+  margin: 0 auto;
+  // border: solid 2px red;
+}
+
+.login {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: lightslategrey;
+  opacity: 95%;
+  border: none;
+
+  input {
+    margin: 5px 0;
+  }
+}
+
+#password-input {
+  height: 2.2em;
+}
+#username-input {
+  @extend #password-input;
 }
