--- a/src/css/_bookform.scss
+++ b/src/css/_bookform.scss
@@ -12,6 +12,9 @@
  .request-trip-form {
   width: 780px;
   @include common-flex-display(flex, column, center);
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
   align-items: center;
   background-color: lightslategrey;
   opacity: 80%;
